@@ -1,20 +1,26 @@
 %define ver @VERSION@
 %define name @PACKAGE@
 
+%define with_ssl 1
+
 Summary: Loadmouth is a Jabber client written in C.
 Name: %name
 Version: %ver
 Release: imendio.1
+Vendor: Imendio
 URL: http://www.imendio.com/projects/loudmouth
 Source0: %{name}-%{ver}.tar.gz
 License: LGPL
 Group: System Environment/Libraries
 BuildRoot: %{_tmppath}/%{name}-root
 Requires: glib2 >= @GLIB2_REQUIRED@
-Requires: gnutls >= @GNUTLS_REQUIRED@
 BuildRequires: glib2-devel >= @GLIB2_REQUIRED@
-BuildRequires: gnutls-devel >= @GNUTLS_REQUIRED@
 BuildRequires: gtk-doc >= 0.10
+
+%if %{with_ssl}
+Requires: gnutls >= @GNUTLS_REQUIRED@
+BuildRequires: gnutls-devel >= @GNUTLS_REQUIRED@
+%endif
 
 %description
 Loudmouth is a lightweight and easy-to-use C library for programming with the Jabber protocol. It's designed to be easy to get started with and yet extensible to let you do anything the Jabber protocol allows. 
@@ -24,7 +30,10 @@ Summary:	Development files for RoadRunner..
 Group: 		Development/Libraries
 Requires:	%name = %{PACKAGE_VERSION}
 Requires:	glib2-devel >= @GLIB2_REQUIRED@
+
+%if %{with_ssl}
 Requires:       gnutls-devel >= @GNUTLS_REQUIRED@
+%endif
 
 %description devel
 Loudmouth is a lightweight and easy-to-use C library for programming with the Jabber protocol. It's designed to be easy to get started with and yet extensible to let you do anything the Jabber protocol allows. 
@@ -34,7 +43,13 @@ Loudmouth is a lightweight and easy-to-use C library for programming with the Ja
 
 %build
 
-%configure --enable-gtk-doc
+%configure --enable-gtk-doc \
+%if %{with_ssl}
+           --with-ssl=yes
+%else
+           --with-ssl=no
+%endif
+	  
 make
 
 %install
